tests/baselines/reference/exportDefaultImportedType.errors.txt
/main.ts(2,16): error TS2693: 'Foo' only refers to a type, but is being used as a value here.


==== /exported.ts (0 errors) ====
    type Foo = number;
    export { Foo };
    
==== /main.ts (1 errors) ====
    import { Foo } from "./exported";
    export default Foo;
                   ~~~
!!! error TS2693: 'Foo' only refers to a type, but is being used as a value here.
    